--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -5,7 +5,7 @@ on:
 permissions:
   pull-requests: write
 
-name: Post welcome comment1
+name: comment Post welcome
 on:
   pull_request:
     types: [opened]
